# fastseqio

./: .gitignore  README.md  pyproject.toml  setup.py  zensical.toml
.github/workflows/: ci.yml  wheels.yml
docs/: advanced.md  examples.md  index.md
docs/api/: record.md  seqiofile.md
python/src/fastseqio/: __init__.py
