[project]
name = "fastseqio"
version = "0.1.2"
description = "A package for reading and writing fasta/fastq files"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "dwpeng", email = "1732889554@qq.com" }]
dependencies = []
license = { file = "LICENSE" }

[project.urls]
homepage = "https://github.com/dwpeng/fastseqio"
repository = "https://github.com/dwpeng/fastseqio"

[build-system]
requires = ["setuptools>=65.5", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "zensical>=0.0.2",
]
test = [
    "pytest>=8.3.4",
]

[tool.cibuildwheel]
# Build using the manylinux2014 image
manylinux-x86_64-image = "quay.io/pypa/manylinux2014_x86_64:latest"
manylinux-aarch64-image = "quay.io/pypa/manylinux2014_aarch64:latest"
